--- a/voter-program/JsonBasedVoting/docs/html/doxygen.css
+++ b/voter-program/JsonBasedVoting/docs/html/doxygen.css
@@ -22,8 +22,8 @@ h1.groupheader {
 }
 
 h2.groupheader {
-	border-bottom: 1px solid #446997;
-	color: #111B27;
+	border-bottom: 1px solid #A3A3A3;
+	color: #505050;
 	font-size: 150%;
 	font-weight: normal;
 	margin-top: 1.75em;
@@ -106,8 +106,8 @@ h3.version {
 }
 
 div.qindex, div.navtab{
-	background-color: #D9E2ED;
-	border: 1px solid #5E85B6;
+	background-color: #F0F0F0;
+	border: 1px solid #B8B8B8;
 	text-align: center;
 }
 
@@ -123,13 +123,13 @@ div.navtab {
 /* @group Link Styling */
 
 a {
-	color: #172433;
+	color: #5D5D5D;
 	font-weight: normal;
 	text-decoration: none;
 }
 
 .contents a:visited {
-	color: #1F3046;
+	color: #6C6C6C;
 }
 
 a:hover {
@@ -142,9 +142,9 @@ a.qindex {
 
 a.qindexHL {
 	font-weight: bold;
-	background-color: #537DB1;
+	background-color: #B3B3B3;
 	color: #FFFFFF;
-	border: 1px double #436895;
+	border: 1px double #A2A2A2;
 }
 
 .contents a.qindexHL:visited {
@@ -159,11 +159,11 @@ a.elRef {
 }
 
 a.code, a.code:visited, a.line, a.line:visited {
-	color: #1F3046; 
+	color: #6C6C6C; 
 }
 
 a.codeRef, a.codeRef:visited, a.lineRef, a.lineRef:visited {
-	color: #1F3046; 
+	color: #6C6C6C; 
 }
 
 /* @end */
@@ -192,8 +192,8 @@ ul {
 }
 
 pre.fragment {
-        border: 1px solid #92ADCE;
-        background-color: #F8F9FB;
+        border: 1px solid #D2D2D2;
+        background-color: #FCFCFC;
         padding: 4px 6px;
         margin: 4px 8px 4px 2px;
         overflow: auto;
@@ -207,8 +207,8 @@ pre.fragment {
 div.fragment {
   padding: 0 0 1px 0; /*Fixed: last line underline overlap border*/
   margin: 4px 8px 4px 2px;
-	background-color: #F8F9FB;
-	border: 1px solid #92ADCE;
+	background-color: #FCFCFC;
+	border: 1px solid #D2D2D2;
 }
 
 div.line {
@@ -324,9 +324,9 @@ div.contents {
 }
 
 td.indexkey {
-	background-color: #D9E2ED;
+	background-color: #F0F0F0;
 	font-weight: bold;
-	border: 1px solid #92ADCE;
+	border: 1px solid #D2D2D2;
 	margin: 2px 0px 2px 0;
 	padding: 2px 10px;
         white-space: nowrap;
@@ -334,14 +334,14 @@ td.indexkey {
 }
 
 td.indexvalue {
-	background-color: #D9E2ED;
-	border: 1px solid #92ADCE;
+	background-color: #F0F0F0;
+	border: 1px solid #D2D2D2;
 	padding: 2px 10px;
 	margin: 2px 0px;
 }
 
 tr.memlist {
-	background-color: #DDE5EF;
+	background-color: #F1F1F1;
 }
 
 p.formulaDsp {
@@ -424,15 +424,15 @@ span.vhdllogic {
 }
 
 blockquote {
-        background-color: #EFF3F7;
-        border-left: 2px solid #537DB1;
+        background-color: #F8F8F8;
+        border-left: 2px solid #B3B3B3;
         margin: 0 24px 0 4px;
         padding: 0 12px 0 16px;
 }
 
 blockquote.DocNodeRTL {
    border-left: 0;
-   border-right: 2px solid #537DB1;
+   border-right: 2px solid #B3B3B3;
    margin: 0 4px 0 24px;
    padding: 0 16px 0 12px;
 }
@@ -465,18 +465,18 @@ td.tiny {
 .dirtab {
 	padding: 4px;
 	border-collapse: collapse;
-	border: 1px solid #5E85B6;
+	border: 1px solid #B8B8B8;
 }
 
 th.dirtab {
-	background: #D9E2ED;
+	background: #F0F0F0;
 	font-weight: bold;
 }
 
 hr {
 	height: 0px;
 	border: none;
-	border-top: 1px solid #23364D;
+	border-top: 1px solid #727272;
 }
 
 hr.footer {
@@ -511,7 +511,7 @@ table.memberdecls {
 .mdescLeft, .mdescRight,
 .memItemLeft, .memItemRight,
 .memTemplItemLeft, .memTemplItemRight, .memTemplParams {
-	background-color: #F3F6F9;
+	background-color: #FAFAFA;
 	border: none;
 	margin: 4px;
 	padding: 1px 0 0 8px;
@@ -523,7 +523,7 @@ table.memberdecls {
 }
 
 .memSeparator {
-        border-bottom: 1px solid #BFCFE2;
+        border-bottom: 1px solid #E5E5E5;
         line-height: 1px;
         margin: 0px;
         padding: 0px;
@@ -538,7 +538,7 @@ table.memberdecls {
 }
 
 .memTemplParams {
-	color: #1F3046;
+	color: #6C6C6C;
         white-space: nowrap;
 	font-size: 80%;
 }
@@ -551,15 +551,15 @@ table.memberdecls {
 
 .memtitle {
 	padding: 8px;
-	border-top: 1px solid #658BB9;
-	border-left: 1px solid #658BB9;
-	border-right: 1px solid #658BB9;
+	border-top: 1px solid #BCBCBC;
+	border-left: 1px solid #BCBCBC;
+	border-right: 1px solid #BCBCBC;
 	border-top-right-radius: 4px;
 	border-top-left-radius: 4px;
 	margin-bottom: -1px;
 	background-image: url('nav_f.png');
 	background-repeat: repeat-x;
-	background-color: #C8D5E6;
+	background-color: #E9E9E9;
 	line-height: 1.25;
 	font-weight: 300;
 	float:left;
@@ -574,14 +574,14 @@ table.memberdecls {
 
 .memtemplate {
 	font-size: 80%;
-	color: #1F3046;
+	color: #6C6C6C;
 	font-weight: normal;
 	margin-left: 9px;
 }
 
 .memnav {
-	background-color: #D9E2ED;
-	border: 1px solid #5E85B6;
+	background-color: #F0F0F0;
+	border: 1px solid #B8B8B8;
 	text-align: center;
 	margin: 2px;
 	margin-right: 15px;
@@ -619,14 +619,14 @@ table.memberdecls {
 }
 
 .memproto, dl.reflist dt {
-        border-top: 1px solid #658BB9;
-        border-left: 1px solid #658BB9;
-        border-right: 1px solid #658BB9;
+        border-top: 1px solid #BCBCBC;
+        border-left: 1px solid #BCBCBC;
+        border-right: 1px solid #BCBCBC;
         padding: 6px 0px 6px 0px;
-        color: #080D12;
+        color: #363636;
         font-weight: bold;
         text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.9);
-        background-color: #C1D0E3;
+        background-color: #E6E6E6;
         /* opera specific markup */
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
         border-top-right-radius: 4px;
@@ -645,11 +645,11 @@ table.memberdecls {
 }
 
 .memdoc, dl.reflist dd {
-        border-bottom: 1px solid #658BB9;      
-        border-left: 1px solid #658BB9;      
-        border-right: 1px solid #658BB9; 
+        border-bottom: 1px solid #BCBCBC;      
+        border-left: 1px solid #BCBCBC;      
+        border-right: 1px solid #BCBCBC; 
         padding: 6px 10px 2px 10px;
-        background-color: #F8F9FB;
+        background-color: #FCFCFC;
         border-top-width: 0;
         background-image:url('nav_g.png');
         background-repeat:repeat-x;
@@ -736,11 +736,11 @@ span.mlabels {
 }
 
 span.mlabel {
-        background-color: #38567C;
-        border-top:1px solid #283F5A;
-        border-left:1px solid #283F5A;
-        border-right:1px solid #92ADCE;
-        border-bottom:1px solid #92ADCE;
+        background-color: #939393;
+        border-top:1px solid #7C7C7C;
+        border-left:1px solid #7C7C7C;
+        border-right:1px solid #D2D2D2;
+        border-bottom:1px solid #D2D2D2;
 	text-shadow: none;
 	color: white;
 	margin-right: 4px;
@@ -759,8 +759,8 @@ span.mlabel {
 
 div.directory {
         margin: 10px 0px;
-        border-top: 1px solid #537DB1;
-        border-bottom: 1px solid #537DB1;
+        border-top: 1px solid #B3B3B3;
+        border-bottom: 1px solid #B3B3B3;
         width: 100%;
 }
 
@@ -798,7 +798,7 @@ div.directory {
 
 .directory tr.even {
 	padding-left: 6px;
-	background-color: #EFF3F7;
+	background-color: #F8F8F8;
 }
 
 .directory img {
@@ -816,11 +816,11 @@ div.directory {
         cursor: pointer;
         padding-left: 2px;
         padding-right: 2px;
-	color: #172433;
+	color: #5D5D5D;
 }
 
 .arrow {
-    color: #537DB1;
+    color: #B3B3B3;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -840,7 +840,7 @@ div.directory {
     height: 14px;
     width: 16px;
     display: inline-block;
-    background-color: #38567C;
+    background-color: #939393;
     color: white;
     text-align: center;
     border-radius: 4px;
@@ -905,7 +905,7 @@ div.dynheader {
 
 address {
 	font-style: normal;
-	color: #0B1118;
+	color: #3E3E3E;
 }
 
 table.doxtable caption {
@@ -919,12 +919,12 @@ table.doxtable {
 }
 
 table.doxtable td, table.doxtable th {
-	border: 1px solid #0C131B;
+	border: 1px solid #434343;
 	padding: 3px 7px 2px;
 }
 
 table.doxtable th {
-	background-color: #131D2A;
+	background-color: #535353;
 	color: #FFFFFF;
 	font-size: 110%;
 	padding-bottom: 4px;
@@ -934,7 +934,7 @@ table.doxtable th {
 table.fieldtable {
         /*width: 100%;*/
         margin-bottom: 10px;
-        border: 1px solid #658BB9;
+        border: 1px solid #BCBCBC;
         border-spacing: 0px;
         -moz-border-radius: 4px;
         -webkit-border-radius: 4px;
@@ -950,8 +950,8 @@ table.fieldtable {
 
 .fieldtable td.fieldtype, .fieldtable td.fieldname {
         white-space: nowrap;
-        border-right: 1px solid #658BB9;
-        border-bottom: 1px solid #658BB9;
+        border-right: 1px solid #BCBCBC;
+        border-bottom: 1px solid #BCBCBC;
         vertical-align: top;
 }
 
@@ -960,7 +960,7 @@ table.fieldtable {
 }
 
 .fieldtable td.fielddoc {
-        border-bottom: 1px solid #658BB9;
+        border-bottom: 1px solid #BCBCBC;
         /*width: 100%;*/
 }
 
@@ -979,9 +979,9 @@ table.fieldtable {
 .fieldtable th {
         background-image:url('nav_f.png');
         background-repeat:repeat-x;
-        background-color: #C8D5E6;
+        background-color: #E9E9E9;
         font-size: 90%;
-        color: #080D12;
+        color: #363636;
         padding-bottom: 4px;
         padding-top: 5px;
         text-align:left;
@@ -992,7 +992,7 @@ table.fieldtable {
         -webkit-border-top-right-radius: 4px;
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
-        border-bottom: 1px solid #658BB9;
+        border-bottom: 1px solid #BCBCBC;
 }
 
 
@@ -1014,8 +1014,8 @@ table.fieldtable {
 	background-position: 0 -5px;
 	height:30px;
 	line-height:30px;
-	color:#456B9A;
-	border:solid 1px #8EAACC;
+	color:#A5A5A5;
+	border:solid 1px #D0D0D0;
 	overflow:hidden;
 	margin:0px;
 	padding:0px;
@@ -1030,7 +1030,7 @@ table.fieldtable {
 	background-image:url('bc_s.png');
 	background-repeat:no-repeat;
 	background-position:right;
-	color:#121C28;
+	color:#515151;
 }
 
 .navpath li.navelem a
@@ -1039,7 +1039,7 @@ table.fieldtable {
 	display:block;
 	text-decoration: none;
 	outline: none;
-	color: #0A0F16;
+	color: #3B3B3B;
 	font-family: 'Lucida Grande',Geneva,Helvetica,Arial,sans-serif;
 	text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.9);
 	text-decoration: none;        
@@ -1047,7 +1047,7 @@ table.fieldtable {
 
 .navpath li.navelem a:hover
 {
-	color:#324E70;
+	color:#8B8B8B;
 }
 
 .navpath li.footer
@@ -1059,7 +1059,7 @@ table.fieldtable {
         background-image:none;
         background-repeat:no-repeat;
         background-position:right;
-        color:#121C28;
+        color:#515151;
         font-size: 8pt;
 }
 
@@ -1106,9 +1106,9 @@ div.header
 {
         background-image:url('nav_h.png');
         background-repeat:repeat-x;
-	background-color: #F3F6F9;
+	background-color: #FAFAFA;
 	margin:  0px;
-	border-bottom: 1px solid #92ADCE;
+	border-bottom: 1px solid #D2D2D2;
 }
 
 div.headertitle
@@ -1303,7 +1303,7 @@ dl.section dd {
 	padding: 0px;
 	margin: 0px;
 	width: 100%;
-	border-bottom: 1px solid #283F5A;
+	border-bottom: 1px solid #7C7C7C;
 }
 
 .image
@@ -1338,7 +1338,7 @@ dl.section dd {
 
 div.zoom
 {
-	border: 1px solid #4971A2;
+	border: 1px solid #A9A9A9;
 }
 
 dl.citelist {
@@ -1346,7 +1346,7 @@ dl.citelist {
 }
 
 dl.citelist dt {
-        color:#101923;
+        color:#4C4C4C;
         float:left;
         font-weight:bold;
         margin-right:10px;
@@ -1360,8 +1360,8 @@ dl.citelist dd {
 
 div.toc {
         padding: 14px 25px;
-        background-color: #EAEFF5;
-        border: 1px solid #B5C7DD;
+        background-color: #F7F7F7;
+        border: 1px solid #E1E1E1;
         border-radius: 7px 7px 7px 7px;
         float: right;
         height: auto;
@@ -1390,7 +1390,7 @@ div.toc li {
 
 div.toc h3 {
         font: bold 12px/1.2 Arial,FreeSans,sans-serif;
-	color: #1F3046;
+	color: #6C6C6C;
         border-bottom: 0 none;
         margin: 0;
 }
@@ -1662,7 +1662,7 @@ table.markdownTable {
 }
 
 table.markdownTable td, table.markdownTable th {
-	border: 1px solid #0C131B;
+	border: 1px solid #434343;
 	padding: 3px 7px 2px;
 }
 
@@ -1670,12 +1670,12 @@ table.markdownTableHead tr {
 }
 
 table.markdownTableBodyLeft td, table.markdownTable th {
-	border: 1px solid #0C131B;
+	border: 1px solid #434343;
 	padding: 3px 7px 2px;
 }
 
 th.markdownTableHeadLeft th.markdownTableHeadRight th.markdownTableHeadCenter th.markdownTableHeadNone {
-	background-color: #131D2A;
+	background-color: #535353;
 	color: #FFFFFF;
 	font-size: 110%;
 	padding-bottom: 4px;
@@ -1702,7 +1702,7 @@ table.markdownTable {
 }
 
 table.markdownTable td, table.markdownTable th {
-	border: 1px solid #0C131B;
+	border: 1px solid #434343;
 	padding: 3px 7px 2px;
 }
 
@@ -1710,7 +1710,7 @@ table.markdownTable tr {
 }
 
 th.markdownTableHeadLeft, th.markdownTableHeadRight, th.markdownTableHeadCenter, th.markdownTableHeadNone {
-	background-color: #131D2A;
+	background-color: #535353;
 	color: #FFFFFF;
 	font-size: 110%;
 	padding-bottom: 4px;
